dist/1.0/bin/sample/retrieveUnpackaged/objects/Billing_Accounts__c.object
<CustomObject>
    <fields>
        <fullName>RegistrationAddress__c</fullName>
        <description>Registration Address from Account</description>
        <formula>IF(ISBLANK(Account__r.ShippingStreet), &apos;&apos;, Account__r.ShippingStreet) +
IF(ISBLANK(Account__r.ShippingCity), &apos;&apos;, &apos;, &apos; + Account__r.ShippingCity) +
IF(ISBLANK(Account__r.ShippingPostalCode), &apos;&apos;, &apos;, &apos; + Account__r.ShippingPostalCode) +
IF(ISBLANK(Account__r.ShippingCountry), &apos;&apos;, &apos;, &apos; + Account__r.ShippingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Registration Address from Account</inlineHelpText>
        <label>Registration Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specifies, whether the BA is retail or wholesale.</description>
        <inlineHelpText>Specifies, whether the BA is retail or wholesale.</inlineHelpText>
        <label>Retail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room_No__c</fullName>
        <description>Room Number - part if Invoicing Address</description>
        <inlineHelpText>Room Number - part if Invoicing Address</inlineHelpText>
        <label>Room No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Code__c</fullName>
        <description>Displays Sales Code entered on Sales User assigned to BA</description>
        <formula>Sales_User__r.Sales_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Sales Code entered on Sales User assigned to BA</inlineHelpText>
        <label>Sales Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_User__c</fullName>
        <description>GTS Sales Person assigned as owner of this Billing Account</description>
        <inlineHelpText>GTS Sales Person assigned as owner of this Billing Account</inlineHelpText>
        <label>Sales User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <description>Reseller&apos;s Folder Id - should be set for Resellers according to the name of sFTP folder</description>
        <inlineHelpText>Reseller&apos;s Folder Id - should be set for Resellers according to the name of sFTP folder</inlineHelpText>
        <label>Reseller’s folder Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Id of Billing Account from source system (in case of migrated data)</description>
        <externalId>true</externalId>
        <inlineHelpText>Id of Billing Account from source system (in case of migrated data)</inlineHelpText>
        <label>Source Record Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SpecificSymbol__c</fullName>
        <description>Bank Specific Symbol used as extension of Bank Name for Direct Debit</description>
        <inlineHelpText>Bank Specific Symbol used as extension of Bank Name for Direct Debit</inlineHelpText>
        <label>Specific Symbol</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State/Province of Invoicing Address</description>
        <inlineHelpText>State/Province of Invoicing Address</inlineHelpText>
        <label>State/Province</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Billing Account:
New - newly created, awaits creation in Billing; 
Pending - created in Provisioning Process; 
Active - created in Billing, with some services active
Inactive - created in Billling, but without services anymore</description>
        <inlineHelpText>Status of Billing Account:
New - newly created, awaits creation in Billing; 
Pending - created in Provisioning Process; 
Active - created in Billing, with some services active
Inactive - created in Billling, but without services anymore</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <description>First line for Street Name of Invoicing Address</description>
        <inlineHelpText>First line for Street Name of Invoicing Address</inlineHelpText>
        <label>Street 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <description>Second line for Street Name of Invoicing Address</description>
        <inlineHelpText>Second line for Street Name of Invoicing Address</inlineHelpText>
        <label>Street 2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_No__c</fullName>
        <description>Street Number - part of Invoicing Address</description>
        <inlineHelpText>Street Number - part of Invoicing Address</inlineHelpText>
        <label>Street No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synchronization_Status__c</fullName>
        <description>Status of synchronization between SFDC and Billing:
none - there was no synchronization done yet or synchronization is not required
retryable - there was error during synchronization; system will try again later
nonretryable - there was fatal error during synchronization; system will not try again</description>
        <inlineHelpText>Status of sync between SFDC and Billing:
none - there was no sync done yet or sync is not required
retryable - there was error during sync; system will try again later
nonretryable - there was fatal error during sync; system will not try again</inlineHelpText>
        <label>Synchronization Status</label>
        <picklist>
            <picklistValues>
                <fullName>none</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>retryable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nonretryable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Id_Relation__c</fullName>
        <description>Relation to Object storing Tax Identification Number</description>
        <inlineHelpText>Relation to Object storing Tax Identification Number</inlineHelpText>
        <label>Tax Id Relation</label>
        <referenceTo>Country_Related_Data__c</referenceTo>
        <relationshipLabel>Billing Accounts (Tax Id Relation)</relationshipLabel>
        <relationshipName>Billing_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Identification_Number__c</fullName>
        <description>Tax Identification Number from Related Account</description>
        <formula>Tax_Id_Relation__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tax Identification Number from Related Account</inlineHelpText>
        <label>Tax Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Number_Relation__c</fullName>
        <description>Relation to Object storing VAT Number</description>
        <inlineHelpText>Relation to Object storing VAT Number</inlineHelpText>
        <label>VAT Number Relation</label>
        <referenceTo>Country_Related_Data__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <description>VAT Number from related Account</description>
        <formula>VAT_Number_Relation__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>VAT Number from related Account</inlineHelpText>
        <label>VAT Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_code__c</fullName>
        <description>VAT Code for given Billing Account</description>
        <inlineHelpText>VAT Code for given Billing Account</inlineHelpText>
        <label>VAT code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates VIP Customer</description>
        <inlineHelpText>Indicates VIP Customer</inlineHelpText>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wholesale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is Wholesale Customer</description>
        <inlineHelpText>Indicates whether this is Wholesale Customer</inlineHelpText>
        <label>Wholesale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>flgComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if additional Fields (Line 1 &amp; 2) should be printed on the Invoice as a part of Invoicing Address</description>
        <inlineHelpText>Indicates if additional Fields (Line 1 &amp; 2) should be printed on the Invoice as a part of Invoicing Address</inlineHelpText>
        <label>Complete Address</label>
        <type>Checkbox</type>
    </fields>
    <label>Billing Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Bank_Account_Number__c</columns>
        <columns>Billing_period__c</columns>
        <columns>Status__c</columns>
        <columns>Financial_Status_Icon__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Debtor_Group__c</columns>
        <columns>InvoicePhase__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Desynchronized__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Desynchronized_Global</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Created_in_Billing__c</columns>
        <columns>Synchronization_Status__c</columns>
        <columns>Desynchronization_Time__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Invoicing_address__c</columns>
        <columns>Street_No__c</columns>
        <columns>Street_1__c</columns>
        <columns>City__c</columns>
        <columns>Comment__c</columns>
        <columns>RegistrationAddress__c</columns>
        <columns>Currency_Formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Desynchronized__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Inactive</value>
        </filters>
        <filters>
            <field>Synchronization_Status__c</field>
            <operation>equals</operation>
            <value>none,retryable,nonretryable</value>
        </filters>
        <label>Desynchronized Global</label>
    </listViews>
    <listViews>
        <fullName>HU_Desynchronized_BA</fullName>
        <booleanFilter>1 AND ( 2 AND 3 )</booleanFilter>
        <columns>NAME</columns>
        <columns>Desynchronized__c</columns>
        <columns>Synchronization_Status__c</columns>
        <columns>Invoicing_address__c</columns>
        <columns>Billed_From__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InvoiceLanguage__c</field>
            <operation>equals</operation>
            <value>Hungarian</value>
        </filters>
        <filters>
            <field>Billed_From__c</field>
            <operation>notContain</operation>
            <value>GTSHU ECHO</value>
        </filters>
        <filters>
            <field>Billed_From__c</field>
            <operation>notContain</operation>
            <value>GTSHU SCALA</value>
        </filters>
        <label>HU_BillingAccounts</label>
    </listViews>
    <listViews>
        <fullName>blabla</fullName>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Bank_Account_Number__c</columns>
        <columns>BankName__c</columns>
        <columns>PaymentMethod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BankName__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Bank_Account_Number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Bank_Account_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>BankName__c</field>
            <operation>equals</operation>
        </filters>
        <label>Wrong Bank Name or Code</label>
        <sharedTo>
            <groups>Administrators</groups>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BAC{000000000}</displayFormat>
        <label>Billing Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>Case_00N20000002h47hEAA</fullName>
        <active>true</active>
        <errorMessage>Selected BA does not belong to chosen Account.</errorMessage>
        <field>Case.Billing_Account__c</field>
        <filterItems>
            <field>Billing_Accounts__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>List is filtered to the Billing  Accounts which are assigned for selected Account.</infoMessage>
        <isOptional>false</isOptional>
        <name>Case_Billing Account</name>
        <sourceObject>Case</sourceObject>
    </namedFilters>
    <pluralLabel>Billing Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BankAccountNameWithBANumber</fullName>
        <active>true</active>
        <description>Check, if Bank name has been selected then the Bank account number also has to be filled in</description>
        <errorConditionFormula>OR (AND(NOT (ISBLANK(Bank_Account_Number__c)), ISBLANK(BankName__c)),AND ((ISBLANK(Bank_Account_Number__c)), NOT (ISBLANK(BankName__c))))</errorConditionFormula>
        <errorDisplayField>BankName__c</errorDisplayField>
        <errorMessage>If you select a Bank name you have to enter Bank account number. If you enter Bank account number you also have to choose bank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckBankAccountForPaymentMethod</fullName>
        <active>true</active>
        <description>If as a Payement method Direct debit has been selected then Bank name, Bank account number and limit can not be empty</description>
        <errorConditionFormula>AND(PaymentMethod__r.Name = &apos;Direct debit&apos; ,OR( ISNULL(BankName__c) , ISNULL(Bank_Account_Number__c),  ISNULL( Limit__c )))</errorConditionFormula>
        <errorDisplayField>PaymentMethod__c</errorDisplayField>
        <errorMessage>Bank name, Bank account number and Limit are required if Direct debit is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckBankAccountForPaymentMethodBA</fullName>
        <active>true</active>
        <description>If as a Payment method Direct debit has been selected then Bank name, Bank account number and limit can not be empty</description>
        <errorConditionFormula>AND(PaymentMethod__r.Name = &apos;Direct Debit&apos; ,OR( ISBLANK(BankName__c) , ISBLANK(Bank_Account_Number__c), ISBLANK( Limit__c )))</errorConditionFormula>
        <errorDisplayField>PaymentMethod__c</errorDisplayField>
        <errorMessage>If as a Payement method Direct debit has been selected then Bank name, Bank account number and limit can not be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Address_Complete</fullName>
        <active>true</active>
        <description>If Complete Address is marked it checks whether 1st Line and/or 2nd Line is filled in.</description>
        <errorConditionFormula>IF( !ISPICKVAL( Account__r.GTS_Location_del__c, &apos;GTS Hungary&apos;)&amp;&amp;flgComplete__c = true &amp;&amp; IF(Line_1__c = &apos;&apos; &amp;&amp; Line_2__c = &apos;&apos;, true, false), true, false)</errorConditionFormula>
        <errorMessage>You have to fill either 1st Line or 2nd Line when Complete Address is checked!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Debtor_Group_90_validation</fullName>
        <active>true</active>
        <description>Only Billing Manager SK is available to set DG90</description>
        <errorConditionFormula>AND( 
ISCHANGED(Debtor_Group__c), 
ISPICKVAL( Debtor_Group__c, &apos;90&apos;) , $UserRole.Name !=&apos;Billing Manager SK&apos;)</errorConditionFormula>
        <errorDisplayField>Debtor_Group__c</errorDisplayField>
        <errorMessage>Only Billing Manager SK role is able to set Debtor Group 90</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Address_required_for_Delivery_Type</fullName>
        <active>true</active>
        <description>Email address must be given if Invoice Delivery EMAIL selected</description>
        <errorConditionFormula>AND(OR( InvoiceDelivery__r.Value__c  = &apos;EMAIL&apos;, InvoiceDelivery__r.Value__c  = &apos;BOTH&apos;), ISBLANK( Invoice_Email__c ))</errorConditionFormula>
        <errorDisplayField>Invoice_Email__c</errorDisplayField>
        <errorMessage>Please, provide email address for invoice delivery</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HU_BlockBillingSystemChange</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Account__r.GTS_Location_del__c, &apos;GTS Hungary&apos;), NOT(ISNEW()), ISCHANGED( Billed_From__c ))</errorConditionFormula>
        <errorMessage>You are not allowed to changed assigned Billing System, after BA creation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HU_BlockCurrencyChange</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Account__r.GTS_Location_del__c, &apos;GTS Hungary&apos;), NOT(ISNEW()), ISCHANGED( CurrencyIsoCode))</errorConditionFormula>
        <errorMessage>You are not allowed to modify Billing Account Currency after its creation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HU_Invoice_delivery_check</fullName>
        <active>true</active>
        <description>checks the accepted method of invoice delivery for HU</description>
        <errorConditionFormula>AND(ISPICKVAL( Account__r.GTS_Location_del__c, &apos;GTS Hungary&apos;),InvoiceDelivery__r.Name &lt;&gt;&apos;Printed Invoice&apos;)</errorConditionFormula>
        <errorDisplayField>InvoiceDelivery__c</errorDisplayField>
        <errorMessage>The selected Invoice delivery method is not supported in HU. Please correct. the supported value is: Printed Invoice.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HU_invoice_language_check</fullName>
        <active>true</active>
        <description>Invoice language validation for Hungary</description>
        <errorConditionFormula>IF(
ISPICKVAL( Account__r.GTS_Location_del__c, &apos;GTS Hungary&apos;) &amp;&amp;
if(
OR((InvoiceLanguage__r.Name =&apos;English&apos;),(InvoiceLanguage__r.Name =&apos;Slovak&apos;)) ,true,false),true,false)</errorConditionFormula>
        <errorDisplayField>InvoiceLanguage__c</errorDisplayField>
        <errorMessage>The accepted invoice language for Hungary is: Hungarian. Please correct</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HU_payment_method_check</fullName>
        <active>true</active>
        <description>Checks the allowed payment method for Hungary</description>
        <errorConditionFormula>IF(
ISPICKVAL( Account__r.GTS_Location_del__c, &apos;GTS Hungary&apos;) &amp;&amp;
if(
OR( PaymentMethod__r.Name=&apos;Payment Order&apos;) ,true,false),true,false)</errorConditionFormula>
        <errorDisplayField>PaymentMethod__c</errorDisplayField>
        <errorMessage>The selected Payment Method is not handled in Hungary. Please correct.
Possible options are: Postal Payment Check, Bank Transfer or Direct Debit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Modification_of_Active_Account_forbidden</fullName>
        <active>true</active>
        <description>It is not allowed to modify some fields above Pending status</description>
        <errorConditionFormula>AND ( OR (TEXT ( PRIORVALUE( CurrencyIsoCode ) ) != TEXT (CurrencyIsoCode), PRIORVALUE(  Price_List__c  ) != Price_List__c ), NOT (ISPICKVAL( Status__c , &apos;Pending&apos;) ) )</errorConditionFormula>
        <errorMessage>Fields Currency and Price list can be modified only on Pending status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PL_Legal_Entity_required</fullName>
        <active>true</active>
        <description>Legal Entity required for PL</description>
        <errorConditionFormula>ISPICKVAL( Legal_Entity__c, &apos;&apos;) &amp;&amp; ISPICKVAL( Account__r.GTS_Location_del__c , &apos;GTS Poland&apos;)</errorConditionFormula>
        <errorDisplayField>Legal_Entity__c</errorDisplayField>
        <errorMessage>Legal Entity is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TaxId_VATNumber_mustBeFilledAtAccount</fullName>
        <active>false</active>
        <description>If any of those values for Account (Tax Identification Number or VAT Number) is missing, it should be required to provide it for Account before save of Billing Account.</description>
        <errorConditionFormula>OR(Account__r.Tax_identification_number__c == &apos;&apos;, Account__r.VAT_number__c == &apos;&apos;)</errorConditionFormula>
        <errorMessage>Before saving changes to Billing Account please fill: &quot;Tax Identification number&quot; and &quot;Vat number&quot; fields at Account object</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>disable_cmplfls_1st_2nd_line_for_HU</fullName>
        <active>false</active>
        <description>this rule informs users from hungary that they cannot set: Complete Address, 1st line and 2nd line for Hungarian BA</description>
        <errorConditionFormula>IF( 
ISPICKVAL( Account__r.GTS_Location_del__c, &apos;GTS Hungary&apos;) &amp;&amp;
if(
OR(flgComplete__c = true,Line_1__c&lt;&gt;&apos;&apos;,Line_2__c&lt;&gt;&apos;&apos;) ,true,false),true,false)</errorConditionFormula>
        <errorMessage>You are not allowed to select Complete Address, 1st Line or 2nd Line for Hungarian accounts</errorMessage>
    </validationRules>
</CustomObject>